# API.base

./: README.md  pyproject.toml
Dependencies/: cache_manager-0.1.0-py3-none-any.whl  error_exception_handler-0.1.0-py3-none-any.whl
api_client_base/: __init__.py  types.py
api_client_base/auth/: __init__.py  api_key.py  base.py  bearer_token.py  custom.py  oauth2.py
api_client_base/client/: __init__.py  abstract_client.py  async_client.py  sync_client.py
api_client_base/config/: __init__.py  client_config.py
api_client_base/exceptions/: __init__.py  api_exceptions.py
api_client_base/integrations/: __init__.py  cache_integration.py  error_integration.py  logger_integration.py  notification_integration.py
api_client_base/pagination/: __init__.py  paginator.py  strategies.py
api_client_base/request/: __init__.py  builder.py  middleware.py  models.py
api_client_base/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py  timeout.py
api_client_base/response/: __init__.py  model_mapping.py  stream_parsers.py
api_client_base/routing/: __init__.py  endpoint.py  registry.py  url_builder.py
api_client_base/utils/: __init__.py  headers.py  serialization.py
