[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_client_base"
version = "0.1.0"
description = "Abstract, reusable base class for building and authenticating external service API clients"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dev_util_prj" },
]
keywords = ["api", "client", "http", "rest", "async", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cache = ["cache_manager>=0.1.0"]
logging = ["logger_pkg>=0.1.0"]
errors = ["error_exception_handler>=0.1.0"]
all = [
    "cache_manager>=0.1.0",
    "logger_pkg>=0.1.0",
    "error_exception_handler>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "build",
]

[tool.setuptools.packages.find]
include = ["api_client_base*"]
exclude = ["tests*", "Dependencies*"]
